Extract frames from video

--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,4 @@ DATABASE_PORT=5432
 DATABASE_URL=postgresql+psycopg2://${DATABASE_USER}:${DATABASE_USER}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
 
 VIDEO_STORAGE_PATH=data/videos
+FRAME_STORAGE_PATH=data/frames
