--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.22",
     "sqlalchemy>=2.0.46",
+    "ultralytics>=8.4.14",
     "uvicorn>=0.40.0",
 ]
 
